--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: 0xshlomil
 description: 0xshlomil's cyber blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: https://avatars.githubusercontent.com/u/2356934?v=4
 
 #
 # Flags below are optional
